Part 2/2.1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-writer-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-writer-reader
  template:
    metadata:
      labels:
        app: pingpong-writer-reader
    spec:
      volumes:
      containers:
        - name: pingpong-reader
          image: jc40/pingpong-reader:2.0.0
        - name: pingpong-writer
          image: jc40/pingpong-writer:2.0.0
