Part 2/2.1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-writer-reader-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-writer-reader
  ports:
    - name: logoutput
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: pingpong
      port: 2346
      protocol: TCP
      targetPort: 4000
