Part 2/2.1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-writer-reader-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-writer-reader-svc
            port:
              number: 2345
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-writer-reader-svc
            port:
              number: 2346
